--- a/css/skins/blue.css
+++ b/css/skins/blue.css
@@ -25,11 +25,16 @@ a,
 .post .entry-title,
 .author-name,
 .posts-by-author-title {
-	color:#75D6FF;
+	color:#009DC1;
 }
 
 /* Background Colour */
-#masthead,
+#masthead{
+	background-image: url('../mh-home-02.png');
+	background-position: top;
+	background-repeat: no-repeat;
+	height: 350px;
+}
 #isotope-menu,
 .isotope-item a .overlay,
 .project-description-title:after,
@@ -39,10 +44,43 @@ button,
 input[type="submit"],
 input[type="cancel"],
 ::selection {
-	background-color:#75D6FF;
+	background-color: #009DC1;
+
 }
+
+
+#page-title .entry-title {
+	color: white;
+	text-shadow: -3px 1px #2B4768;
+	font-family: 'Dosis', sans-serif;
+	font-size: 40px;
+	letter-spacing: 1px;
+  font-weight: bolder 100;
+}
+#page-title .description {
+	color: white;
+	font-family: 'Dosis', sans-serif;
+	font-size: 18px;
+	letter-spacing: 1px;
+  font-weight: bolder 400;
+}
+
+#content{
+	background-image: url('../BGcontent.png');
+	background-repeat: no-repeat;
+	background-position:bottom;
+	width: auto;
+	height: auto;
+}
+
+@media all and (max-width: 700px){
+	#content {
+		 width:100%;
+		 height:100%;
+		}
+	}
 
 /* Borders */
 #prefooter {
-	border-color:#75D6FF;
+	border-color:#009DC1;
 }
